# rsl-polynomials

./: Cargo.toml  README.md  TODO.md
src/: error.rs  lib.rs  polynomial.rs  solve.rs  utils.rs
src/solve/: cubic.rs  linear.rs  mod.rs  quadratic.rs
src/test/: gsl_test_cubic.rs  gsl_test_eval.rs  gsl_test_quadratic.rs  mod.rs  test_eval.rs  test_polynomial.rs  test_quadratic.rs
